force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__ActualValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualValue__c</fullName>
    <label>Actual Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>