force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__ActualValueDataType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualValueDataType__c</fullName>
    <label>Actual Value Data Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualValueDataType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>