force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>ssot__DisplayOrder__c</fullName>
    <label>Display Order</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DisplayOrder</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>