force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__IsManuallyAnswered__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsManuallyAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Answered</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsManuallyAnswered</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>