force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__SourceContextObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceContextObject__c</fullName>
    <label>Source Context Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceContextObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>