force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__SourceContextObjectRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceContextObjectRecordId__c</fullName>
    <label>Source Context Object Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceContextObjectRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>