force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__TargetValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetValue__c</fullName>
    <label>Target Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>