force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__TargetValueDataType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetValueDataType__c</fullName>
    <label>Target Value Data Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetValueDataType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>