force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__UploadedImageCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__UploadedImageCount__c</fullName>
    <label>Uploaded Image Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UploadedImageCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>