force-app/main/default/objects/ssot__RetailVisitKPI__dlm/fields/ssot__VisitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__VisitId__c</fullName>
    <label>Visit</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VisitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>